--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://Vinyl-Style.github.io/vinyl-style/index.html">
+<meta http-equiv="refresh" content="0; url=https://boiler8.github.io/vinyl-style/index.html">
