--- a/vinyl-style/index.html
+++ b/vinyl-style/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Ionic App</title>
     
-    <base href="/vinyl-style/">
+    <base href="/">
     
     <meta name="color-scheme" content="light dark" />
     <meta
